<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="action_settings">Settings</string>
    <string name="add">ADD</string>
    <string name="add_room">Add new room</string>
    <string name="aircon_no_lcd">LCD display not supported</string>
    <string name="aircon_power_first">Please turn on power first!</string>
    <string name="app_name">ASmart Remote</string>
    <string name="auto">AUTO</string>
    <string name="btn_add_remote">Add remote</string>
    <string name="btn_add_room">Add room</string>
    <string name="btn_delete_remote">Delete remote</string>
    <string name="btn_delete_room">Delete room</string>
    <string name="btn_edit_remote">Edit remote</string>
    <string name="btn_edit_room">Edit room</string>
    <string name="cancel">Cancel</string>
    <string name="category1">TV</string>
    <string name="category2">Settop Box</string>
    <string name="category3">DVD Player</string>
    <string name="category4">Bluray Player</string>
    <string name="category5">Audio System</string>
    <string name="category6">Streaming Box</string>
    <string name="category7">Projector</string>
    <string name="category8">DSLR Camera</string>
    <string name="category9">Air Conditioner</string>
    <string name="close">close</string>
    <string name="delete_device">Delete this remote?</string>
    <string name="delete_room">Delete this room?</string>
    <string name="edit_device">Edit remote name</string>
    <string name="edit_room">Edit room name</string>
    <string name="edittext_empty">Enter name!</string>
    <string name="finish">Press Back again to quit</string>
    <string name="htc_new_detected">HTC Sense 6 Detected. If remote controls does not work, please change HTC 6 mode. After change this option, you have to reboot your HTC phone.</string>
    <string name="input">INPUT</string>
    <string name="name_changed">Name changed!</string>
    <string name="noname">NO NAME</string>
    <string name="ok">OK</string>
    <string name="open">open</string>
    <string name="opt_htc2">HTC Sense 6</string>
    <string name="opt_htc2_desc">After change this option, you have to reboot your HTC phone. Otherwise remote function will not work!</string>
    <string name="opt_vib">Vibrate on key pressed</string>
    <string name="page_add_device">Add New Device</string>
    <string name="page_select_brand">Select Brand</string>
    <string name="page_select_model">Select Model</string>
    <string name="remote">Remote</string>
    <string name="room">Room</string>
    <string name="search_brand">Search Brand</string>
    <string name="select_device">Select device you want to control with your ARemote</string>
</resources>
